# jadzia

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  FIX_JADZIA.ps1  Project-Instructions.md  ROADMAP_FIX.md  ROADMAP_FIX_VERIFICATION.md  SENIOR_ARCHITECT_AUDIT_REPORT.md  SYSTEM_BIBLE.md  _debug_ssh.py  brain.md  check_status.py  debug_ssh.py  fix_debug.py  helpers.py  install_fixes.bat  jadzia-nginx.conf  list_models.py  main.py  nginx_jadzia.conf  pyproject.toml  requirements.txt  state.py  test_chat.py  test_dual_write.py  test_fixes.py  test_models_vps.py  test_wp_explorer_import.py  todo.json  verify_env.py
.cursor/: current-task.md  session-state.md
.opencode/: agents.yaml
Portfolio Vibe-codding/: deployment-strategy.md  mail od ksiegowego.md  projekty-dla-ksiegowego.md  szacunek-godzin-2025.md  zobowiazania-prywatne.md
agent/: __init__.py  agent.py  agent.py.backup  alerts.py  circuit_breaker.py  customer_agent.py  db.py  design_agent_service.py  diff.py  guardrails.py  helpers.py  log.py  portal_qualification_agent.py  prompt.py  rate_store.py  state.py  telegram_formatter.py  telegram_validator.py  telemetry.py
api/: __init__.py  _state.py  app.py  dependencies.py  gemini.py  ingress.py  telegram.py  telegram_client.py  webhooks.py
archive/: legacy-BRAIN-2026-04-09.md  monitor_field_test.ps1  restore_sessions_from_backup.py  run.bat  run.ps1
backup_20260116_130623/: agent.py.bak  state.py.bak
backup_optim/: agent.py  api.py
backup_przed_poziom2_20260116_212944/: agent.py  prompt.py
backups/: requirements.txt.backup  routing.py.backup  wp_explorer_config.py.backup
cli/: __init__.py  main.py
commander-ui/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
core/: __init__.py  agent.py  config.py  ga4_client.py  lead_scoring.py  llm.py  models.py  services.py  webhook_url_guard.py
data.backup.20260117_091114/: agent_changes.jsonl  state_archive_1768509010.json  state_archive_1768509077.json  state_archive_1768509773.json  state_archive_1768509949.json  state_archive_1768510253.json  state_archive_1768511355.json  state_archive_1768511403.json  state_archive_1768511765.json  state_archive_1768511993.json  state_archive_1768565416.json  state_archive_1768565876.json  state_archive_1768566178.json  state_archive_1768566336.json  state_archive_1768569393.json  state_archive_1768570123.json  state_archive_1768570379.json  state_archive_1768583546.json  state_archive_1768583646.json  state_archive_1768583822.json  state_archive_1768583970.json  state_archive_1768584213.json  state_archive_1768584288.json  state_archive_1768586072.json  state_archive_1768586109.json  state_archive_1768586287.json  state_archive_1768586513.json  state_archive_1768586931.json  state_archive_1768587012.json  state_archive_1768587502.json  state_archive_1768594296.json  state_archive_1768594482.json  state_archive_1768594767.json  state_archive_1768597452.json  state_archive_1768597690.json  state_archive_1768597794.json  state_archive_1768598069.json  state_archive_1768598520.json
deployment/: SETUP-SYSTEM-USER.md  __init__.py  _ops_agent_sla_rca.py  _ops_ai_count_14d.py  _ops_ai_hitl_smoke.py  _ops_freshness_rca.py  apply-fb-credentials-stdin.py  check-fb-app-credentials.py  cleanup-e2e-hot-leads.py  commander-prod-smoke.sh  deploy-b2-calendar-e2e.sh  deploy-b3-fb-publish-e2e.sh  deploy-m2-video-e2e.sh  deploy-timeout-fix-vps.sh  deploy-to-vps.sh  exchange-fb-page-token.py  exchange_fb_long_lived.py  install-service.sh  (+47 more)
(+772 files in other folders)
