[project]
name = "jadzia"
version = "1.0.0"
description = "AI agent do zarządzania sklepem internetowym"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "PyJWT>=2.8.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.3.3",
    "filelock>=3.0.0",
    "python-multipart>=0.0.9",
    "google-analytics-data>=0.18.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
jadzia = "cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["agent*", "core*", "api*", "cli*"]

[tool.setuptools.package-data]
agent = ["portal_qualification/data/*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true