[project]
name = "jadzia"
version = "1.0.0"
description = "AI agent do zarządzania sklepem internetowym"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.40.0",
    "cachetools>=5.3.3",
    "easyocr>=1.7.0",
    "fal-client>=0.5.0",
    "fastapi>=0.115.0",
    "filelock>=3.0.0",
    "google-analytics-data>=0.18.0",
    "httpx>=0.27.0",
    "jsonschema>=4.0",
    "paramiko>=3.4.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "bandit>=1.8.0",
    "pip-audit>=2.10.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
jadzia = "cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["agent*", "core*", "api*", "cli*"]

[tool.setuptools.package-data]
agent = ["portal_qualification/data/*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true